compiler/tests/language/negative/oopSurfaceRoleCapability/module/conformanceNotExported.qn
module app.badConformance

import http.hidden.{HiddenAuthenticatedCtx}

pub useHiddenConformance(ctx: HiddenAuthenticatedCtx) -> i64 {
  return ctx.extend.user()?.id
}
